feat: add service to restore product which marked as deleted and error handling in service
