# swagger.json
@@ -126,7 +126,7 @@
                 "tags": [
                     "product"
                 ],
-                "summary": "Get products information by filters",
+                "summary": "Get products by filters",
                 "operationId": "getProductsByFilter",
                 "parameters": [
                     {
@@ -208,7 +208,7 @@
                 "tags": [
                     "admin product"
                 ],
-                "summary": "Insert a new product information",
+                "summary": "Insert a new product",
                 "operationId": "createProduct",
                 "requestBody": {
                     "required": true,
@@ -249,13 +249,13 @@
                 "tags": [
                     "admin product"
                 ],
-                "summary": "Get a detailed product information",
+                "summary": "Get a detailed product",
                 "operationId": "getProductById",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the product",
+                        "description": "Id of the product",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -289,13 +289,13 @@
                 "tags": [
                     "admin product"
                 ],
-                "summary": "Partial edit product information by ID",
+                "summary": "Partial edit product by id",
                 "operationId": "updateProductById",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the product",
+                        "description": "Id of the product",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -342,13 +342,13 @@
                 "tags": [
                     "admin product"
                 ],
-                "summary": "Remove product by ID",
+                "summary": "Remove product by id",
                 "operationId": "deleteProductById",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the product",
+                        "description": "Id of the product",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -379,18 +379,60 @@
                 }
             }
         },
-        "/v1/products/{id}/deleted": {
+        "/v1/products/{id}/soft-delete": {
             "patch": {
                 "tags": [
                     "admin product"
                 ],
-                "summary": "Soft delete product by ID",
-                "operationId": "markProductAsDeletedById",
+                "summary": "Soft delete product by id",
+                "operationId": "softDeleteProductById",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the product",
+                        "description": "Id of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/v1/products/{id}/restore": {
+            "patch": {
+                "tags": [
+                    "admin product"
+                ],
+                "summary": "Restore product by id from soft deletion",
+                "operationId": "restoreProductById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id of the product",
                         "required": true,
                         "schema": {
                             "type": "integer"
